--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:snowflake://tza61701.us-east-1.snowflakecomputing.com/?warehouse=COMPUTE_WH&db=txn_db&schema=PUBLIC
-    username: PayalRane03
-    password: Payalrane03
+    url: jdbc:snowflake://fea56695.us.east-1.snowflakecomputing.com/?warehouse=COMPUTE_WH&db=txn_db&schema=PUBLIC
+    username: 
+    password: 
     driverClassName: com.snowflake.client.jdbc.SnowflakeDriver
 server:
-   port: 8080
+   port: 9000
